--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -2,7 +2,7 @@ name: "godot-ci export"
 on: push
 
 env:
-  GODOT_VERSION: 3.3.4
+  GODOT_VERSION: 4.0
   EXPORT_NAME: Hellscraper
 
 jobs:
@@ -19,7 +19,7 @@ jobs:
       - name: Setup
         run: |
           mkdir -v -p ~/.local/share/godot/templates
-          mv /root/.local/share/godot/templates/${GODOT_VERSION}.stable ~/.local/share/godot/templates/${GODOT_VERSION}.stable
+          mv /root/.local/share/godot/templates/${GODOT_VERSION} ~/.local/share/godot/templates/${GODOT_VERSION}
       - name: Windows Build
         run: |
           mkdir -v -p build/windows
@@ -31,30 +31,30 @@ jobs:
           name: windows
           path: build/windows
 
-  export-linux:
-    name: Linux Export
-    runs-on: ubuntu-20.04
-    container:
-      image: barichello/godot-ci:3.3.4
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          lfs: true
-      - name: Setup
-        run: |
-          mkdir -v -p ~/.local/share/godot/templates
-          mv /root/.local/share/godot/templates/${GODOT_VERSION}.stable ~/.local/share/godot/templates/${GODOT_VERSION}.stable
-      - name: Linux Build
-        run: |
-          mkdir -v -p build/linux
-          cd $EXPORT_NAME
-          godot -v --export "Linux/X11" ../build/linux/$EXPORT_NAME.x86_64
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v1
-        with:
-          name: linux
-          path: build/linux
+  #export-linux:
+  #  name: Linux Export
+  #  runs-on: ubuntu-20.04
+  #  container:
+  #    image: barichello/godot-ci:3.3.4
+  #  steps:
+  #    - name: Checkout
+  #      uses: actions/checkout@v3
+  #      with:
+  #        lfs: true
+  #    - name: Setup
+  #      run: |
+  #        mkdir -v -p ~/.local/share/godot/templates
+  #        mv /root/.local/share/godot/templates/${GODOT_VERSION}.stable ~/.local/share/godot/templates/${GODOT_VERSION}.stable
+  #    - name: Linux Build
+  #      run: |
+  #        mkdir -v -p build/linux
+  #        cd $EXPORT_NAME
+  #        godot -v --export "Linux/X11" ../build/linux/$EXPORT_NAME.x86_64
+  #    - name: Upload Artifact
+  #      uses: actions/upload-artifact@v1
+  #      with:
+  #        name: linux
+  #        path: build/linux
 
 #  export-web:
 #    name: Web Export
@@ -89,27 +89,27 @@ jobs:
 #         branch: gh-pages # The branch the action should deploy to.
 #          folder: build/web # The folder the action should deploy.
 
-  export-mac:
-    name: Mac Export
-    runs-on: ubuntu-20.04
-    container:
-      image: barichello/godot-ci:3.3.4
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          lfs: true
-      - name: Setup
-        run: |
-          mkdir -v -p ~/.local/share/godot/templates
-          mv /root/.local/share/godot/templates/${GODOT_VERSION}.stable ~/.local/share/godot/templates/${GODOT_VERSION}.stable
-      - name: Mac Build
-        run: |
-          mkdir -v -p build/mac
-          cd $EXPORT_NAME
-          godot -v --export "Mac OSX" ../build/mac/$EXPORT_NAME.zip
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v1
-        with:
-          name: mac
-          path: build/mac
+  #export-mac:
+  #  name: Mac Export
+  #  runs-on: ubuntu-20.04
+  #  container:
+  #    image: barichello/godot-ci:3.3.4
+  #  steps:
+  #    - name: Checkout
+  #      uses: actions/checkout@v3
+  #      with:
+  #        lfs: true
+  #    - name: Setup
+  #      run: |
+  #        mkdir -v -p ~/.local/share/godot/templates
+  #        mv /root/.local/share/godot/templates/${GODOT_VERSION}.stable ~/.local/share/godot/templates/${GODOT_VERSION}.stable
+  #    - name: Mac Build
+  #      run: |
+  #        mkdir -v -p build/mac
+  #        cd $EXPORT_NAME
+  #        godot -v --export "Mac OSX" ../build/mac/$EXPORT_NAME.zip
+  #    - name: Upload Artifact
+  #      uses: actions/upload-artifact@v1
+  #      with:
+  #        name: mac
+  #        path: build/mac
