--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -18,8 +18,8 @@ jobs:
           lfs: true
       - name: Setup
         run: |
-          mkdir -v -p ~/root/.local/share/godot/templates/${GODOT_VERSION}
-          mv ~/root/.local/share/godot/templates/${GODOT_VERSION} ~/.local/share/godot/templates/${GODOT_VERSION}
+          mkdir -v -p ~/.local/share/godot/templates/${GODOT_VERSION}
+          mv ~/.local/share/godot/templates/${GODOT_VERSION} ~/.local/share/godot/templates/${GODOT_VERSION}
       - name: Windows Build
         run: |
           mkdir -v -p build/windows
