--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -18,7 +18,7 @@ jobs:
           lfs: true
       - name: Setup
         run: |
-          mkdir -v -p ~/root/.local/share/godot/templates/${GODOT_VERSION}
+          mkdir -v -p ~/root/.local/share/godot/templates/
           mv /github/home/root/.local/share/godot/templates/${GODOT_VERSION} ~/root/.local/share/godot/templates/${GODOT_VERSION}
       - name: Windows Build
         run: |
