--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup
         run: |
           mkdir -v -p ~/root/.local/share/godot/templates/
-          mv /root/.local/share/godot/templates/${GODOT_VERSION}.stable ~/root/.local/share/godot/templates/${GODOT_VERSION}.stable
+          #mv /root/.local/share/godot/templates/${GODOT_VERSION}.stable ~/root/.local/share/godot/templates/${GODOT_VERSION}.stable
       - name: Windows Build
         run: |
           mkdir -v -p build/windows
